# gala-elementary-alt-tab-switcher

./: .gitignore  CMakeLists.txt  README.md
data/: org.pantheon.desktop.gala.plugins.elementary-alt-tab.gschema.xml
debian/: changelog  control  copyright
src/: Main.vala  RoundedActor.vala  RoundedText.vala  Settings.vala  Utils.vala
src/Widgets/: RoundedText.vala  WindowPreviewActor.vala
